--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,14 +6,14 @@ phases:
    build:
     commands:
       - echo Build started on `date`
-      - mvn clean package 
+      - mvn package 
   post_build:
     commands:
       - echo Build completed on `date`
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket cd-sample-sam --output-template-file outputSamTemplate.yaml
+      - aws cloudformation package --template-file samtemplate.yaml --s3-bucket cd-sample-sam --output-template-file outputSamTemplate.yaml
 artifacts:
   
   files:
   	- target/sample-1.0.0.jar
-    - samTemplate.yaml
+    - samtemplate.yaml
     - outputSamTemplate.yaml
